@@ -1,0 +1,5 @@
+=====
+Hooks
+=====
+
+.. qte_hooks:: qtile_extras.hook.subscribe
